--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,25 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-*{
+* {
   font-family: "Outfit", sans-serif;
 }
 
-@theme{
+@theme {
   --color-primary: #E6CCFF;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
   display: none;
+}
+
+.reset-tw :not(pre):not(code) {
+  all: revert;
+}
+
+.loader div:nth-child(2){
+  animation-delay: 0.2s;
+}
+.loader div:nth-child(3){
+  animation-delay: 0.4s;
 }
